--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -55,6 +55,10 @@ Table OF Contents
 	Typography
 \*----------------------------*/
 
+.header-links.pull-right {
+  display: none;
+}
+
 #middle-content {
   margin: 0px 100px 0px 100px;
   /* border-image:   background-image: linear-gradient(to right, #00dbde, #fc00ff);
@@ -77,7 +81,7 @@ Table OF Contents
 }
 
 #top-header {
-  /* display: none; */
+  display: none;
 }
 
 body {
@@ -440,7 +444,7 @@ textarea.input {
 #top-header {
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: white;
+  background-color: #7972EE;
 }
 
 .header-links li {
@@ -454,7 +458,7 @@ textarea.input {
 }
 
 .header-links li a {
-  color: black;
+  color: white;
 }
 
 .header-links li a:hover {
