--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,3 +1,11 @@
+:root {
+  --color-primary: white;
+  --color-primary-dark: #3F72F4;
+  --color-text: ;
+  --color-gradient-1: ;
+  --color-gradient-2: ;
+}
+
 /*
 Template Name: Electro - HTML Ecommerce Template
 Author: yaminncco
@@ -5,7 +13,7 @@ Author: yaminncco
 Colors:
 	Body 		: #333
 	Headers 	: #2B2D42
-	Primary 	: #D10024
+	Primary 	: var(--color-primary-dark)
 	Dark 		: #15161D ##1E1F29
 	Grey 		: #E4E7ED #FBFBFC #8D99AE #B9BABC
 
@@ -55,7 +63,7 @@ Table OF Contents
 	Typography
 \*----------------------------*/
 
-.header-links.pull-right {
+#top-header {
   display: none;
 }
 
@@ -81,7 +89,7 @@ Table OF Contents
 }
 
 #top-header {
-  display: none;
+  /* display: none; */
 }
 
 body {
@@ -106,7 +114,7 @@ a {
 }
 
 a:hover, a:focus {
-  color: #D10024;
+  color: var(--color-primary-dark);
   text-decoration: none;
   outline: none;
 }
@@ -124,7 +132,7 @@ ul, ol {
 .primary-btn {
   display: inline-block;
   padding: 12px 30px;
-  background-color: #D10024;
+  background-color: var(--color-primary-dark);
   border: none;
   border-radius: 40px;
   color: #FFF;
@@ -208,7 +216,7 @@ textarea.input {
 
 .input-number .qty-up:hover, .input-number .qty-down:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 /*-- Select input --*/
@@ -288,8 +296,8 @@ textarea.input {
 }
 
 .input-radio input[type="radio"]:checked+label span, .input-checkbox input[type="checkbox"]:checked+label span {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: var(--color-primary-dark);
+  border-color: var(--color-primary-dark);
 }
 
 .input-radio input[type="radio"]:checked+label span:after {
@@ -366,13 +374,13 @@ textarea.input {
   display: block;
   width: 0%;
   height: 2px;
-  background-color: #D10024;
+  background-color: var(--color-primary-dark);
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
 
 .section-tab-nav li.active a {
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 .section-tab-nav li a:hover:after, .section-tab-nav li a:focus:after, .section-tab-nav li.active a:after {
@@ -430,7 +438,7 @@ textarea.input {
 }
 
 #breadcrumb .breadcrumb-tree li a:hover {
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 /*=========================================================
@@ -444,7 +452,7 @@ textarea.input {
 #top-header {
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: #7972EE;
+  background-color: white;
 }
 
 .header-links li {
@@ -458,7 +466,7 @@ textarea.input {
 }
 
 .header-links li a {
-  color: white;
+  color: black;
 }
 
 .header-links li a:hover {
@@ -487,7 +495,11 @@ textarea.input {
 
 .header-logo .logo img {
   display: block;
+  max-height: 80px;
+  /* transform: rotate(13deg); */
 }
+
+
 
 /*----------------------------*\
 	Search
@@ -515,7 +527,7 @@ textarea.input {
   height: 40px;
   width: 100px;
   /* background: #c400cb; */
-  background: #ff77a9;
+  background: var(--color-primary-dark);
   color: #FFF;
   font-weight: 700;
   border: none;
@@ -567,7 +579,7 @@ textarea.input {
   border-radius: 50%;
   font-size: 10px;
   color: #FFF;
-  background-color: #D10024;
+  background-color: var(--color-primary-dark);
 }
 
 .header-ctn .menu-toggle {
@@ -625,7 +637,7 @@ textarea.input {
   display: inline-block;
   width: calc(50% - 0px);
   padding: 12px;
-  background-color: #D10024;
+  background-color: var(--color-primary-dark);
   color: #FFF;
   text-align: center;
   font-weight: 700;
@@ -659,7 +671,7 @@ textarea.input {
   position: relative;
   background-clip: padding-box;
   border-radius: 7px;
-  /* border-top: 3px solid #D10024; */
+  /* border-top: 3px solid var(--color-primary-dark); */
 }
 
 /* #navigation:before {
@@ -685,7 +697,7 @@ textarea.input {
 }
 
 .main-nav>li>a:hover, .main-nav>li>a:focus, .main-nav>li.active>a {
-  color: #D10024;
+  color: var(--color-primary-dark);
   background-color: transparent;
 }
 
@@ -694,7 +706,7 @@ textarea.input {
   display: block;
   width: 0%;
   height: 2px;
-  background-color: #D10024;
+  background-color: var(--color-primary-dark);
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
@@ -772,7 +784,7 @@ textarea.input {
   bottom: 0;
   left: 0px;
   width: 60%;
-  background: #D10024;
+  background: var(--color-primary-dark);
   opacity: 0.9;
   -webkit-transform: skewX(-45deg);
   -ms-transform: skewX(-45deg);
@@ -786,7 +798,7 @@ textarea.input {
   bottom: 0;
   left: 1px;
   width: 100%;
-  background: #D10024;
+  background: var(--color-primary-dark);
   opacity: 0.9;
   -webkit-transform: skewX(-45deg) translateX(-100%);
   -ms-transform: skewX(-45deg) translateX(-100%);
@@ -854,7 +866,7 @@ textarea.input {
   display: inline-block;
   width: 100px;
   height: 100px;
-  background: #D10024e6;
+  background: var(--color-primary-dark)e6;
   text-align: center;
   border-radius: 50%;
   margin: 0px 5px;
@@ -909,8 +921,8 @@ textarea.input {
 }
 
 .product:hover {
-  -webkit-box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #D10024;
-  box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #D10024;
+  -webkit-box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px var(--color-primary-dark);
+  box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px var(--color-primary-dark);
 }
 
 .product .product-img {
@@ -935,13 +947,13 @@ textarea.input {
 
 .product .product-img .product-label>span.sale {
   background-color: #FFF;
-  border-color: #D10024;
-  color: #D10024;
+  border-color: var(--color-primary-dark);
+  color: var(--color-primary-dark);
 }
 
 .product .product-img .product-label>span.new {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: var(--color-primary-dark);
+  border-color: var(--color-primary-dark);
   color: #FFF;
 }
 
@@ -969,11 +981,11 @@ textarea.input {
 }
 
 .product .product-body .product-name>a:hover, .product .product-body .product-name>a:focus {
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 .product .product-body .product-price {
-  color: #D10024;
+  color: var(--color-primary-dark);
   font-size: 18px;
 }
 
@@ -1028,7 +1040,7 @@ textarea.input {
 
 .product .product-body .product-btns>button:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: var(--color-primary-dark);
   border-radius: 50%;
 }
 
@@ -1104,15 +1116,15 @@ textarea.input {
   width: 40px;
   height: 40px;
   line-height: 38px;
-  color: #D10024;
+  color: var(--color-primary-dark);
   opacity: 0;
   visibility: hidden;
 }
 
 .product .add-to-cart .add-to-cart-btn:hover {
   background-color: #FFF;
-  color: #D10024;
-  border-color: #D10024;
+  color: var(--color-primary-dark);
+  border-color: var(--color-primary-dark);
   padding: 0px 30px 0px 50px;
 }
 
@@ -1165,12 +1177,12 @@ textarea.input {
 }
 
 .product-widget .product-body .product-name>a:hover, .product-widget .product-body .product-name>a:focus {
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 .product-widget .product-body .product-price {
   font-size: 14px;
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 .product-widget .product-body .product-price .product-old-price {
@@ -1296,7 +1308,7 @@ textarea.input {
 }
 
 .noUi-connect {
-  background-color: #D10024;
+  background-color: var(--color-primary-dark);
 }
 
 .noUi-horizontal {
@@ -1309,7 +1321,7 @@ textarea.input {
   left: -6px;
   top: -4px;
   border: none;
-  background: #D10024;
+  background: var(--color-primary-dark);
   -webkit-box-shadow: none;
   box-shadow: none;
   border-radius: 50%;
@@ -1370,12 +1382,12 @@ textarea.input {
 
 .store-grid li:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 .store-grid li.active {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: var(--color-primary-dark);
+  border-color: var(--color-primary-dark);
   color: #FFF;
   cursor: default;
 }
@@ -1408,12 +1420,12 @@ textarea.input {
 
 .store-pagination li:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 .store-pagination li.active {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: var(--color-primary-dark);
+  border-color: var(--color-primary-dark);
   color: #FFF;
   font-weight: 500;
   cursor: default;
@@ -1477,7 +1489,7 @@ textarea.input {
 }
 
 #product-imgs .product-preview.slick-current {
-  border-color: #D10024;
+  border-color: var(--color-primary-dark);
 }
 
 #product-imgs .slick-prev {
@@ -1527,7 +1539,7 @@ textarea.input {
 }
 
 .product-details .product-rating>i.fa-star {
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 .product-details .review-link {
@@ -1539,7 +1551,7 @@ textarea.input {
   font-size: 24px;
   margin-top: 10px;
   margin-bottom: 15px;
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 .product-details .product-price .product-old-price {
@@ -1553,7 +1565,7 @@ textarea.input {
   text-transform: uppercase;
   font-weight: 700;
   margin-left: 30px;
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 .product-details .product-options {
@@ -1598,15 +1610,15 @@ textarea.input {
   width: 40px;
   height: 40px;
   line-height: 38px;
-  color: #D10024;
+  color: var(--color-primary-dark);
   opacity: 0;
   visibility: hidden;
 }
 
 .product-details .add-to-cart .add-to-cart-btn:hover {
   background-color: #FFF;
-  color: #D10024;
-  border-color: #D10024;
+  color: var(--color-primary-dark);
+  border-color: var(--color-primary-dark);
   padding: 0px 30px 0px 50px;
 }
 
@@ -1696,7 +1708,7 @@ textarea.input {
 }
 
 #product-tab .tab-nav li.active a {
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 #product-tab .tab-nav li a:after {
@@ -1704,7 +1716,7 @@ textarea.input {
   display: block;
   width: 0%;
   height: 2px;
-  background-color: #D10024;
+  background-color: var(--color-primary-dark);
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
@@ -1734,7 +1746,7 @@ textarea.input {
 }
 
 .rating-avg .rating-stars>i.fa-star, .rating .rating-stars>i.fa-star {
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 .rating li {
@@ -1752,7 +1764,7 @@ textarea.input {
 }
 
 .rating .rating-progress>div {
-  background-color: #D10024;
+  background-color: var(--color-primary-dark);
   position: absolute;
   left: 0;
   top: 0;
@@ -1806,7 +1818,7 @@ textarea.input {
 }
 
 .reviews .review-heading .review-rating>i.fa-star {
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 .reviews-pagination {
@@ -1827,12 +1839,12 @@ textarea.input {
 
 .reviews-pagination li:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 .reviews-pagination li.active {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: var(--color-primary-dark);
+  border-color: var(--color-primary-dark);
   color: #FFF;
   cursor: default;
 }
@@ -1876,12 +1888,12 @@ textarea.input {
 }
 
 .review-form .input-rating .stars>label:hover:before, .review-form .input-rating .stars>label:hover~label:before {
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 .review-form .input-rating .stars>input:checked label:before, .review-form .input-rating .stars>input:checked~label:before {
   content: "\f005";
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 /*=========================================================
@@ -1947,7 +1959,7 @@ textarea.input {
 
 .order-summary .order-col .order-total {
   font-size: 24px;
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 .order-details .payment-method {
@@ -1965,7 +1977,7 @@ textarea.input {
 
 #newsletter.section {
   border-top: 2px solid #E4E7ED;
-  border-bottom: 3px solid #D10024;
+  border-bottom: 3px solid var(--color-primary-dark);
   margin-top: 30px;
 }
 
@@ -2007,7 +2019,7 @@ textarea.input {
   width: 160px;
   height: 40px;
   font-weight: 700;
-  background: #D10024;
+  background: var(--color-primary-dark);
   color: #FFF;
   border: none;
   border-radius: 0px 40px 40px 0px;
@@ -2041,7 +2053,7 @@ textarea.input {
 
 .newsletter .newsletter-follow li a:hover, .newsletter .newsletter-follow li a:focus {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 /*=========================================================
@@ -2078,13 +2090,13 @@ textarea.input {
 
 .footer-links li i {
   margin-right: 15px;
-  color: #D10024;
+  color: var(--color-primary-dark);
   width: 14px;
   text-align: center;
 }
 
 .footer-links li a:hover {
-  color: #D10024;
+  color: var(--color-primary-dark);
 }
 
 .copyright {
@@ -2124,8 +2136,8 @@ textarea.input {
 }
 
 .slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: var(--color-primary-dark);
+  border-color: var(--color-primary-dark);
 }
 
 .slick-prev:before, .slick-next:before {
@@ -2170,7 +2182,7 @@ textarea.input {
 }
 
 .slick-dots li.slick-active button:before {
-  background-color: #D10024;
+  background-color: var(--color-primary-dark);
 }
 
 .custom-dots .slick-dots {
