--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ ul, ol {
 
 /* Header */
 header{
-    padding: 15px 100px 10px 100px;
+    padding: 15px 10px 10px 10px;
     z-index: 9999;
     background-image: var(--color-gradient);
     width: 100%;
@@ -187,6 +187,7 @@ header > .container {
 /* Navigation */
 
 nav {
+    margin: 0px 100px 0px 100px;
     margin-top: 20px;
     background-color: var(--color-background-white);
     position: relative;
@@ -220,6 +221,8 @@ nav > .container a span {
 
 
 article {
+    position: relative;
+    background-clip: padding-box;
     width: calc(100% - 200px);
     margin: 200px 100px 0px 100px;
     background-color: var(--color-background-white);
@@ -233,6 +236,6 @@ article:before {
     inset: 0;
     z-index: -1;
     margin: -3px;
-    background-image: var(--color-gradient);
+    background-image: linear-gradient(to left, var(--color-gradient-1), var(--color-gradient-2));
     border-radius: inherit;
 }
