--- a/css/admin.css
+++ b/css/admin.css
@@ -5,6 +5,7 @@
     border: none;
     padding-top: 0px;
     padding: unset;
+    color: var(--color-text-grey);
 }
 
 .fake-body{
@@ -65,37 +66,60 @@
 
 form .container{
     display: flex;
+    margin-bottom: 10px;
+    justify-content: center;
 }
 
+/* form .container > *:first-child{
+    margin-right: 10px;
+} */
+
 .feature-form select {
+    margin-right: 10px;
     display: inline-block;
     max-width: 125px;
     width: 100%;
-    margin-bottom: 15px;
     height: 30px;
 }
 
 .feature-form label {
+    margin-top: 5px;
+    margin-right: 15px;
     max-width: 125px;
     width: 100%;
 }
 .feature-form input {
-
     height: 30px;
 }
 
 .feature-form input[type = "text"]{
-    width: calc(100% - 135px);
+    width: 100%;
 }
 
 .feature-form .price-product-input {
-    width: 20px !important;
+    max-width: 20% !important;
+}
+
+.feature-form .price-product-line{
+    background-color: var(--color-text-grey);
+    width: 20px;
+    height: 1px;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 15px;
+    margin-left: 15px;
+}
+
+.price-product-input:after{
+    content: "đ";
+    width: inherit;
+    height: inherit;
 }
 
 
 
 .feature-form input[type="range"]{
-    /* width: 100%; */
+    width: 100%;
 }
 
 
